Fix pinned Crostini apps disappearing on restore

This patch fixes LauncherControllerHelper::IsValidIDForCurrentUser to
handle Crostini apps, so that the restore process can correctly add
pinned Crostini apps.

TEST=Manually verified both the Terminal and installed Crostini apps
re-appear after reboot.

Bug: 839141
Change-Id: I09a40a9f24779b19a2b1bae1c21f9a33e0ae1708
Reviewed-on: https://chromium-review.googlesource.com/1043665
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Timothy Loh <timloh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555999}
Former-commit-id: 366731bb14a1f1b160e7156448a3b56dca5648c7